Improved way of handling FORWARDS function declaration
Issue #1169